vlib/v/checker/tests/sum.out
vlib/v/checker/tests/sum.vv:5:8: error: cannot cast non-sum type `int` using `as`
    3 | fn non_sum() {
    4 |     v := 4
    5 |     _ = v as rune
      |           ~~
    6 |     _ = v as Var
    7 | }
vlib/v/checker/tests/sum.vv:6:8: error: cannot cast non-sum type `int` using `as` - use e.g. `Var(some_expr)` instead.
    4 |     v := 4
    5 |     _ = v as rune
    6 |     _ = v as Var
      |           ~~
    7 | }
    8 |
vlib/v/checker/tests/sum.vv:10:7: error: cannot cast `rune` to `Var`
    8 | 
    9 | fn sum() {
   10 |     _ := Var(`J`)
      |          ~~~~~~~~
   11 |     mut s2 := Var('')
   12 |     s2 = true
vlib/v/checker/tests/sum.vv:12:7: error: cannot assign to `s2`: expected `Var`, not `bool`
   10 |     _ := Var(`J`)
   11 |     mut s2 := Var('')
   12 |     s2 = true
      |          ~~~~
   13 |     _ = s2
   14 | }
